[package]
name = "redpkg"
authors = ["Brian "firedcat" Anderson <catfired@proton.me>" , "Atiksh Sharma <atsharma623@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "GPL v3.0"

[profile.bench]
lto = "thin"
debug = 1
strip = false

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
clap = {version = "4.4.6" , features = ["derive"]}
cli_input = "0.1.2"
colored = "2.0.4"
